--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="action_settings">Settings</string>
     <string name="user_name_of_workout">Workout Name</string>
     <string name="button_text_add_workout">Click to add Workout</string>
+    <string name="longpressdelete">Press long to delete</string>
 </resources>
